--- a/mta.yaml
+++ b/mta.yaml
@@ -87,30 +87,30 @@ resources:
    parameters:
      service: destination
      service-plan: lite
-# -----------------------APPROUTER----------------------------
- - name: risk-management-approuter
-# ------------------------------------------------------------
-   type: nodejs
-   path: approuter
-   requires:
-     - name: risk-management-xsuaa
-     - name: srv-api
-       group: destinations
-       properties:
-         forwardAuthToken: true
-         strictSSL: true
-         name: srv-binding
-         url: "~{srv-url}"
-   build-parameters:
-       requires:
-       - name: risk-management-app
-         artifacts:
-          - ./*
-         target-path: resources
-# --------------------------UI--------------------------------
- - name: risk-management-app
-# ------------------------------------------------------------
-   type: html5
-   path: app
-   build-parameters:
-     supported-platforms: []
+# # -----------------------APPROUTER----------------------------
+#  - name: risk-management-approuter
+# # ------------------------------------------------------------
+#    type: nodejs
+#    path: approuter
+#    requires:
+#      - name: risk-management-xsuaa
+#      - name: srv-api
+#        group: destinations
+#        properties:
+#          forwardAuthToken: true
+#          strictSSL: true
+#          name: srv-binding
+#          url: "~{srv-url}"
+#    build-parameters:
+#        requires:
+#        - name: risk-management-app
+#          artifacts:
+#           - ./*
+#          target-path: resources
+# # --------------------------UI--------------------------------
+#  - name: risk-management-app
+# # ------------------------------------------------------------
+#    type: html5
+#    path: app
+#    build-parameters:
+#      supported-platforms: []
