Accessing SAP hana table and views

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
                 }
             },
             "db": {
-                "kind": "sql"
+                "kind": "hana"
             },
             "xsuaa": {
                 "kind": "xsuaa"
